--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.android.gms:play-services:10.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.1'
 }
