--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,17 @@
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
+                <action android:name="STOP_TEST_SERVICE" />
+                <action android:name="START_TEST_SERVICE" />
             </intent-filter>
 
         </service>
         <service android:name=".BackgroundService"
             android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="STOP_TEST_SERVICE" />
+                <action android:name="START_TEST_SERVICE" />
+            </intent-filter>
         </service>
     </application>
 
